<resources>
    <string name="app_name">SafeAuth</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="type_your_email">Email</string>
    <string name="retype_your_password">Re-enter the Password</string>
    <string name="type_your_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet? Sign Up</string>
    <string name="logout">Logout</string>
</resources>